# ImageAcquisition

./: .cproject  .gitattributes  .gitignore  .project  CameraData.cpp  CameraData.h  CameraDialog.cpp  CameraDialog.h  CameraItem.cpp  CameraItem.h  DeviceItem.cpp  DeviceItem.h  ExposeImageInstance.cpp  ExposeImageInstance.h  ExposeImageInterface.cpp  ExposeImageInterface.h  ExposeImageParameters.cpp  ExposeImageParameters.h  ExposeImageProcess.cpp  ExposeImageProcess.h  FilterWheelData.cpp  FilterWheelData.h  FilterWheelItem.cpp  FilterWheelItem.h  IPixInsightCamera.h  IPixInsightDevice.h  IPixInsightFilterWheel.h  ImageAcquisisitionSettingsParameters.cpp  ImageAcquisitionInstance.h  ImageAcquisitionInterface.h  ImageAcquisitionModule.cpp  ImageAcquisitionModule.h  ImageAcquisitionProcess.h  ImageAcquisitionSession.cpp  ImageAcquisitionSession.h  ImageAcquisitionSessionInstance.cpp  ImageAcquisitionSessionInstance.h  ImageAcquisitionSessionParameters.cpp  ImageAcquisitionSessionParameters.h  ImageAcquisitionSessionProcess.h  (+14 more)
ASCOM_Driver/PixInsightASCOMCameraDriver/: PixInsightASCOMCameraDriver.sln
ASCOM_Driver/PixInsightASCOMCameraDriver/PixInsightASCOMCameraDriver/: AssemblyInfo.cpp  PixInsightASCOMCameraDriver.cpp  PixInsightASCOMCameraDriver.h  PixInsightASCOMCameraDriver.vcproj  ReadMe.txt  Stdafx.cpp
ASCOM_Driver/PixInsightASCOMCameraDriver/PixInsightASCOMCameraDriver/Debug/: BuildLog.htm  PixInsightASCOMCameraDriver.pch  mt.dep  vc90.idb
Debug/: CameraData.d  ExposeImageInstance.d  ImageAcquisition-pxm.dylib  libImageAcquisition-pxm.dylib  makefile  objects.mk  sources.mk  subdir.mk
Debug/windows/vc9/: subdir.mk
TestBuild/: CameraData.d  CameraDialog.d  CameraItem.d  DeviceItem.d  ExposeImageInstance.d  ExposeImageInterface.d  ExposeImageParameters.d  ExposeImageProcess.d  FilterWheelData.d  FilterWheelItem.d  ImageAcquisisitionSettingsParameters.d  ImageAcquisitionModule.d  ImageAcquisitionSession.d  ImageAcquisitionSessionInstance.d  ImageAcquisitionSessionInterface.d  ImageAcquisitionSessionParameters.d  ImageAcquisitionSessionProcess.d  ImageAcquisitionSettingsInstance.d  ImageAcquisitionSettingsInterface.d  ImageAcquisitionSettingsProcess.d  makefile  objects.mk  parsers.d  sources.mk  subdir.mk  test-ImageAcquisition
TestBuild/test/: TestCameraItem.d  subdir.mk
doc/: basic_lrgb.graffle  basic_lrgb_obj.graffle  basic_lrgb_obj_af.graffle  basic_lrgb_obj_af_comp.graffle  basic_ui.graffle  basic_ui_af1.graffle  pixinsight_article_april_2011_draphael.odt  pixinsight_article_april_2011_draphael_draft2.odt
freebsd/g++/: Makefile  makefile-x86  makefile-x86_64
linux/g++/: Makefile  makefile-x86  makefile-x86_64
macosx/g++/: Makefile  makefile-x86  makefile-x86_64
macosx/g++/x86_64/Release/: CameraDialog.d  ExposeImageInstance.d  ExposeImageInterface.d  ExposeImageParameters.d  ExposeImageProcess.d  ImageAcquisisitionSettingsParameters.d  ImageAcquisition-pxm.dylib  ImageAcquisitionInstance.d  ImageAcquisitionInterface.d  ImageAcquisitionModule.d  ImageAcquisitionParameters.d  ImageAcquisitionProcess.d  ImageAcquisitionSettingsInstance.d  ImageAcquisitionSettingsInterface.d  ImageAcquisitionSettingsProcess.d
src/: CMakeLists.txt  CameraData.cpp  CameraData.h  CameraDialog.cpp  CameraItem.h  DeviceItem.cpp  ExposeImageInstance.cpp  ExposeImageInstance.h  ExposeImageInterface.cpp  ExposeImageInterface.h  ExposeImageParameters.cpp  ExposeImageParameters.h  ExposeImageThread.cpp  ExposeImageThread.h  FilterWheelData.cpp  IPixInsightCamera.h  IPixInsightDevice.h  IPixInsightFilterWheel.h  ImageAcquisisitionSettingsParameters.cpp  ImageAcquisitionModule.h  ImageAcquisitionSessionInstance.cpp  ImageAcquisitionSessionProcess.cpp  ImageAcquisitionSessionProcess.h  ImageAcquisitionSettingsInstance.h  ImageAcquisitionSettingsInterface.cpp  ImageAcquisitionSettingsProcess.cpp  SerializableTraits.h  c_flag_overrides.cmake  cxx_flag_overrides.cmake
src/icons/: ExposeImageIcon.xpm  ImageAcquisitionSettingsIcon.xpm
test/: TestCameraItem.cpp  TestCameraItem.h
windows/vc9/: IPixInsightCamera.cpp  ImageAcquisition.sln  ImageAcquisition.vcproj  ImageAcquisition.vcxproj  ImageAcquisition.vcxproj.filters  UpgradeLog.XML
windows/vc9/Debug/: CL.read.1.tlog  CL.write.1.tlog  ImageAcquisition.exp  ImageAcquisition.lastbuildstate  ImageAcquisition.lib  ImageAcquisition.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
windows/vc9/Win32/Debug/: BuildLog.htm  CL.read.1.tlog  CL.write.1.tlog  ImageAcquisition.exp  ImageAcquisition.lastbuildstate  ImageAcquisition.lib  ImageAcquisition.write.1.tlog  mt.dep  (+9 more)
(+30 files in other folders)
